[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "DingTalk Robot"
edition = "2018"
license = "MIT"
name = "dingtalk_robot"
readme = "README.md"
repository = "https://github.com/rise0chen/dingtalk"
version = "0.1.0"

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
base64 = "0.21"
hmac = "0.12"
reqwest = {version = "0.11", default-features = false, features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
tokio = {version = "1", features = ["rt", "macros"]}
